--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,2 +1,3 @@
-<mat-toolbar color = "accent"><span class="gap">signup </span>  <span class ="filler">login</span></mat-toolbar>
-<app-menu> </app-menu>
+<app-header></app-header>
+<router-outlet></router-outlet>
+<app-footer></app-footer>
