--- a/src/app/menu/menu.component.html
+++ b/src/app/menu/menu.component.html
@@ -12,7 +12,7 @@
  
  <div fxFlex>
  <mat-grid-list cols="2" rowHeight="200px">
-   <mat-grid-tile *ngFor="let dish of dishes; index as i; first as isFirst" (click)="onSelect(dish)">
+   <mat-grid-tile *ngFor="let dish of dishes;" [routerLink]="['/dishdetail',dish.id]">
      <img height="200px" src={{dish.image}} alt={{dish.name}}>
      <mat-grid-tile-footer>
      <h1>{{dish.name | uppercase}} </h1>
@@ -20,7 +20,7 @@
     </mat-grid-tile>
   </mat-grid-list>
   </div>
-  <app-dishdetail [dish]="selectedDish"> </app-dishdetail>
+  
 </div>
 
 
