--- a/src/app/contact/contact.component.html
+++ b/src/app/contact/contact.component.html
@@ -36,3 +36,49 @@
     </div>
   </div>
 </div>
+<div>
+<div fxFlex fxFlexOffset="20px" class="form-size">
+  <h3> send us your feedback</h3>
+
+  <form novalidate [formGroup]="feedbackForm" #fform="ngForm" (ngSubmit)="onsubmit()">
+    <p>
+      <mat-form-field class= "half-width">
+         <input matInput formControlName="firstname" placeholder="First Name" type="text" required>
+        <mat-error *ngIf="feedbackForm.get('firstname').hasError('required')&&feedbackForm.get('firstname').touched">First name is required</mat-error>
+      </mat-form-field>
+      <mat-form-field class="half-width">
+        <input matInput formControlName="Lastname" placeholder="Lastname" type="text">
+        <mat-error *ngIf="feedbackForm.get('Lastname').hasError('required')&&feedbackForm.get('Lastname').touched">Last name is required</mat-error>
+      </mat-form-field>
+    </p>
+    <p>
+      <mat-form-field class="half-width">
+        <input matInput formControlName="telnum" placeholder="telnum" type="number">
+        <mat-error *ngIf="feedbackForm.get('telnum').hasError('telnum')&&feedbackForm.get('telnum').touched">tel is required</mat-error>
+      </mat-form-field>
+      <mat-form-field class="half-width">
+        <input matInput formControlName="email" placeholder="email" type="email">
+        <mat-error *ngIf="feedbackForm.get('email').hasError('email')&&feedbackForm.get('email').touched">Email is required</mat-error>
+      </mat-form-field>
+    </p>
+    <table class="form-size">
+      <td>
+        <mat-slide-toggle formControlName="agree">May we contact you?</mat-slide-toggle>
+      </td>
+      <td>
+        <mat-select placeholder ="How?" formControlName="contacttype">
+          <mat-option *ngFor="let ctype of contacttype" [value]="ctype">
+            {{ ctype }}
+          </mat-option>
+        </mat-select>
+      </td>
+    </table>
+    <p>
+      <mat-form-field class="full-width">
+        <textarea matInput formControlName="message" placeholder="your Feedback" rows=12></textarea>
+      </mat-form-field>
+    </p>
+    <button type="submit" mat-button class="background-primary text-floral-white" [disabled]="fform.form.invalid"> submit </button>
+  </form>
+</div>
+</div>
