--- a/src/app/menu/menu.component.html
+++ b/src/app/menu/menu.component.html
@@ -10,17 +10,23 @@
  </div>
 
  
- <div fxFlex>
+ <div fxFlex *ngIf="dishes" [@expand]>
  <mat-grid-list cols="2" rowHeight="200px">
-   <mat-grid-tile *ngFor="let dish of dishes;" [routerLink]="['/dishdetail',dish.id]">
-     <img height="200px" src={{dish.image}} alt={{dish.name}}>
+   <mat-grid-tile *ngFor="let dish of dishes;" [routerLink]="['/dishdetail',dish.id]" appHighlights>
+     <img height="200px" src="{{BaseURL+dish.image}}"  alt={{dish.name}}>
      <mat-grid-tile-footer>
      <h1>{{dish.name | uppercase}} </h1>
     </mat-grid-tile-footer>
     </mat-grid-tile>
   </mat-grid-list>
   </div>
-  
+</div>
+<div [hidden]="dishes|| errmsg">
+  <mat-spinner></mat-spinner><h4>Loading....Please Wait</h4>
+</div>
+<div fxFlex *ngIf="errmsg">
+<h2>Error</h2>
+<h3>{{errmsg}}</h3>
 </div>
 
 
