--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -5,45 +5,57 @@
      fxLayoutAlign.gt-md="space-around center"
      fxLayoutGap="10px">
 
-<mat-card *ngIf="dish" fxFlex>
+<mat-card *ngIf="dish" fxFlex [@expand]>
   <mat-card-header>
     <div mat-card-avatar></div>
     <mat-card-title>
       <h3>{{dish.name | uppercase}}</h3>
     </mat-card-title>
   </mat-card-header>
-  <img mat-card-image src={{dish.image}} alt={{dish.name}}>
+  <img mat-card-image src="{{ BaseURL+dish.image}}" alt={{dish.name}}>
   <mat-card-content>
     <p>{{dish.description}}
     </p>
   </mat-card-content>
 </mat-card>
-
-<mat-card *ngIf="promotion" fxFlex>
+<div [hidden]="dish|| errmsg">
+  <mat-spinner></mat-spinner><h4>Loading .......... please Wait</h4>
+</div>
+<div fxFlex *ngIf="errmsg">
+  <h2>Error</h2>
+  <h4>{{errmsg}}</h4>
+</div>
+<mat-card *ngIf="promotion" fxFlex [@expand]>
   <mat-card-header>
     <div mat-card-avatar></div>
     <mat-card-title>
       <h3>{{promotion.name | uppercase}}</h3>
     </mat-card-title>
   </mat-card-header>
-  <img mat-card-image src={{promotion.image}} alt={{promotion.name}}>
+  <img mat-card-image src="{{BaseURL+promotion.image}}" alt={{promotion.name}}>
   <mat-card-content>
     <p>{{promotion.description}}
     </p>
   </mat-card-content>
 </mat-card>
-<mat-card *ngIf="leaders" fxFlex>
+<div [hidden]="promotion">
+  <mat-spinner></mat-spinner><h4>Loading .......... please Wait</h4>
+</div>
+
+<mat-card  *ngIf="leaders" fxFlex [@expand]> 
   <mat-card-header>
     <div mat-card-avatar></div>
     <mat-card-title>
       <h3>{{leaders.name | uppercase}}</h3>
     </mat-card-title>
   </mat-card-header>
-  <img mat-card-image src={{leaders.image}} alt={{leaders.name}}>
+  <img mat-card-image src="{{BaseURL+leaders.image}}" alt={{leaders.name}}>
   <mat-card-content>
     <p>{{leaders.description}}
     </p>
-  </mat-card-content>
+  </mat-card-content >
 </mat-card>
-
+<div [hidden]="leaders">
+  <mat-spinner></mat-spinner><h4>Loading .......... please Wait</h4>
+</div>
 </div>
