--- a/src/styles.scss
+++ b/src/styles.scss
@@ -51,3 +51,9 @@ body {
     margin :20px;
     display:flex;
 }
+.highlight{
+    background-color: $background-pale ;
+    border: 1px solid $primary-color-dark;
+    z-index: 1;
+    transform: scale(1.01);
+}
